udt/dev-udt-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-dev-udt
spec:
  rules:
  - host: udt-dev.ckbapp.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: service-dev-udt
          servicePort: 80
